Changes to .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-EMAIL_ADDRESS=reach.out.hiteshkmurali@zohomail.com
-EMAIL_PASSWORD=RohCnct@824
+EMAIL_ADDRESS=<your gmail id>
+EMAIL_PASSWORD=<your gmail password>
